# Real-Time-Rendering-Engine

./: .gitignore  CMakeLists.txt  README.md  README.txt  gen_prj.cmd  main.cpp
include/: camera.h  common.h  defines.h  diffuse.h  engine.h  entity.h  frame.h  gui.h  light.h  material.h  meshRegistry.h  microfacets.h  renderer.h  runtime.h  scene.h  shaderRegistry.h  transform.h
include/vulkan/: BlurPassVK.h  RTXPassVK.h  SSAOBlurPassVK.h  SSAOPassVK.h  compositionPassVK.h  deferredPassVK.h  depthPassVK.h  deviceVK.h  extensionsVK.h  meshVK.h  renderPassVK.h  rendererVK.h  shadowPassVK.h  utilsVK.h  windowVK.h
libs/filesystem/: fwd.h  path.h  resolver.h
libs/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
libs/pugixml/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  cmake_install.cmake  pugixml-config-version.cmake  pugixml-static.vcxproj  pugixml-static.vcxproj.filters  pugixml-targets.cmake  pugixml.pc  pugixml.sln
libs/tinyobjloader/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  (+8 more)
shaders/: SSAO_f.frag  SSAO_f.spv  SSAO_v.spv  SSAO_v.vert  SSAOblur_f.frag  SSAOblur_f.spv  blur_f.frag  blur_f.spv  blur_v.spv  blur_v.vert  compile.bat  composition_f.frag  composition_f.spv  composition_v.spv  composition_v.vert  diffuse.frag  diffuse.spv  github-recovery-codes.txt  pbr.frag  pbr.spv  rtx_f.frag  rtx_f.spv  shadow.spv  shadow.vert  shadows_g.geom  shadows_g.spv  shadows_v.spv  shadows_v.vert  vert.spv  vert.vert
src/: camera.cpp  common.cpp  diffuse.cpp  engine.cpp  entity.cpp  light.cpp  material.cpp  meshRegistry.cpp  microfacets.cpp  parser.cpp  runtime.cpp  scene.cpp  shaderRegistry.cpp  transform.cpp
(+26 files in other folders)
